--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">СДЕЛАНО</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="tel:+79211853368">
+            +7 (921) 185-33-68
+        </a></li>
+        <li><a href="mailto:energoluga@mail.ru" ?subject="По поводу ремонта квартиры">
+            energoluga@mail.ru
+        </a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-        <li><a href="#">Navbar Link</a></li>
+          <li><a href="tel:+79211853368">
+              +7 (921) 185-33-68
+          </a></li>
+          <li><a href="mailto:energoluga@mail.ru" ?subject="По поводу ремонта квартиры">
+              energoluga@mail.ru
+          </a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -119,13 +127,13 @@
                 <div class="collapsible-header"><i class="material-icons">place</i>188230 г. Луга, Ленинградская обл., пр. Комсомольский д.42</div>
               </li>
               <li>
-                <a href="tel:911">
-                <div class="collapsible-header"><i class="material-icons">smartphone</i>911</div>
+                <a href="tel:+79211853368">
+                <div class="collapsible-header"><i class="material-icons">smartphone</i>+7 (921) 185-33-68</div>
                 </a>
               </li>
               <li>
-                  <a href="mailto:google@google.com" ?subject="По поводу ремонта квартиры">
-                  <div class="collapsible-header"><i class="material-icons">email</i>google@google.com</div>
+                  <a href="mailto:energoluga@mail.ru" ?subject="По поводу ремонта квартиры">
+                  <div class="collapsible-header"><i class="material-icons">email</i>energoluga@mail.ru</div>
                   </a>
                 </li>
             </ul>
