--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Сделано</title>
+  <title>ООО «АПС»</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">СДЕЛАНО</a>
+      <a id="logo-container" href="#" class="brand-logo">ООО «АПС»</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="tel:+79211853368">
             +7 (921) 185-33-68
@@ -132,10 +132,15 @@
                 </a>
               </li>
               <li>
-                  <a href="mailto:energoluga@mail.ru" ?subject="По поводу ремонта квартиры">
-                  <div class="collapsible-header"><i class="material-icons">email</i>energoluga@mail.ru</div>
-                  </a>
-                </li>
+                <a href="mailto:energoluga@mail.ru" ?subject="По поводу ремонта квартиры">
+                <div class="collapsible-header"><i class="material-icons">email</i>energoluga@mail.ru</div>
+                </a>
+              </li>
+              <li>
+                <a href="tel:+78137222053">
+                <div class="collapsible-header"><i class="material-icons">print</i>+7 (81372) 2-20-53</div>
+                </a>
+              </li>
             </ul>
         </div>
       </div>
@@ -157,21 +162,15 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
+          <h5 class="white-text">Реквизиты</h5>
+          <p class="grey-text text-lighten-4">
+            Ермаков С.Ю. <br/>
+            ИНН 4710030198 <br/>
+            Тел/факс +7 (81372) 2-20-53 <br/>
+            188230 г. Луга, Ленинградская обл., пр. Комсомольский д.42
+          </p>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
+        <div class="col l3 s12 right">
           <h5 class="white-text">Connect</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
@@ -184,7 +183,8 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="brown-text text-lighten-3" href="//klykov.space">klykov</a>
+      with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
