--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name = "format-detection" content = "telephone=no">
   <title>ООО «АПС»</title>
 
   <!-- CSS  -->
@@ -165,8 +166,8 @@
           <h5 class="white-text">Реквизиты</h5>
           <p class="grey-text text-lighten-4">
             Ермаков С.Ю. <br/>
-            ИНН <span style="pointer-events: none; color: inherit;">4710030198</span> <br/>
-            Тел/факс <span style="pointer-events: none; color: inherit;">+7 (81372) 2-20-53</span> <br/>
+            ИНН 4710030198 <br/>
+            Тел/факс +7 (81372) 2-20-53 <br/>
             188230 г. Луга, Ленинградская обл., пр. Комсомольский д.42
           </p>
         </div>
