--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Реквизиты</h5>
-          <p class="grey-text text-lighten-4">
+          <p class="grey-text text-lighten-4 left">
             Ермаков С.Ю. <br/>
             ИНН 4710030198 <br/>
             Тел/факс +7 (81372) 2-20-53 <br/>
