--- a/index.html
+++ b/index.html
@@ -66,27 +66,27 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up tnempoleved</h5>
+            <h5 class="center">Делаем быстро</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Как пуля резко.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">Охуенно общаемся</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">С нами всегжа можно договориться за бутылкой Балтики-7.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h5 class="center">Пиздато работаем</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">Плюнем, замотаем изолентой. Надежно!</p>
           </div>
         </div>
       </div>
@@ -99,15 +99,13 @@
       <div class="row">
         <div class="col s12 center maps">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Our works</h4>
+          <h4>Наши работы</h4>
           <!-- https://codepen.io/dudleystorey/pen/ehKpi -->
           <div id="slider">
               <figure>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/austin-fireworks.jpg" alt>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/taj-mahal_copy.jpg" alt>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/ibiza.jpg" alt>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/ankor-wat.jpg" alt>
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/austin-fireworks.jpg" alt>
+              <img src="./image/img1.jpg" alt>
+              <img src="./image/img2.jpg" alt>
+              <img src="./image/img3.jpg" alt>
               </figure>
           </div>
         </div>
@@ -152,14 +150,14 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Охуенный линолеум</h5>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="./image/background1.jpg" alt=""></div>
   </div>
 
-  <footer class="page-footer teal">
+  <footer class="page-footer">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -184,8 +182,8 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="//klykov.space">klykov</a>
-      with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="white-text" href="//klykov.space">klykov</a>
+      with <a class="white-text" href="http://materializecss.com">Materialize</a>
       </div>
     </div>
   </footer>
