--- a/index.html
+++ b/index.html
@@ -66,27 +66,27 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Делаем быстро</h5>
+            <h5 class="center">Заголовок</h5>
 
-            <p class="light">Как пуля резко.</p>
+            <p class="light">Иконка меняется</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Охуенно общаемся</h5>
+            <h5 class="center">Заголовок</h5>
 
-            <p class="light">С нами всегжа можно договориться за бутылкой Балтики-7.</p>
+            <p class="light">Иконка меняется</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Пиздато работаем</h5>
+            <h5 class="center">Заголовок</h5>
 
-            <p class="light">Плюнем, замотаем изолентой. Надежно!</p>
+            <p class="light">Иконка меняется</p>
           </div>
         </div>
       </div>
