--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
     </div>
   </div>
 
+  <!-- Тема заебал запрещать шутить во время разработки -->
+
   <div class="container">
     <div class="section">
       <div class="row">
@@ -150,7 +152,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Охуенный линолеум</h5>
+          <h5 class="header col s12 light">Офигенный линолеум</h5>
         </div>
       </div>
     </div>
