--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div id="index-banner" class="parallax-container">
     <div class="parallax">
       <video playsinline class="video-background" autoplay="autoplay" loop="loop" poster="URL" preload="auto" muted no-controls>
-        <source src="./big_buck_bunny.mp4" type="video/mp4" codecs="avc1.42E01E, mp4a.40.2"'>
+        <source src="./intro_mobile.mp4" type="video/mp4" codecs="avc1.42E01E, mp4a.40.2"'>
       </video>
     </div>
   </div>
