some updates from hosting

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name = "format-detection" content = "telephone=no">
+
+  <meta name="yandex-verification" content="dac9f93fb38c3cdf" />
+
   <title>ООО «АПС»</title>
   
   <meta name="keywords" content="Комплексный ремонт квартиры Луга, Капитальный ремонт квартиры Луга, Ремонт новостроек под ключ Луга, Ремонт квартир под ключ Луга, Быстрый ремонт квартиры, Недорогой качественный ремонт квартир, Ремонт быстро Луга, Хороший ремонт, Качественный ремонт, Ремонт квартир, Хороший ремонт квартиры, Качественный ремонт квартир Луга, Ремонт квартир дешево, Строительство Луга, Строительство домов Луга, Стройматериалы Луга, Дома дешево Луга, Дома под ключ, Качественная отделка квартир, Качественная отделка домов, Реставрация, Поклейка обоев Луга, Обои Луга, Врезка замков, Замена замков Луга, Установка дверей, Укладка плитки, Ландшафтный дизайн, Бетонирование, Установка забора, Штукатурка, Отделочные работы, Монтаж кровли, Монтаж кровли Луга, Доставка стройтоваров, Бытовки, Электрик Луга, Сантехник Луга, Грузчики Луга, Вывоз мусора Луга, Уборка Луга, Монтаж окон Луга, Монтаж балконов, Балконы Луга, Дешево">
@@ -16,7 +19,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">ООО «АПС»</a>
+      <a id="logo-container" href="#" class="brand-logo"><img width="150px" height="auto" src="image/Logotip.png" alt="Logo" /></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="tel:+79211853368">
             +7 (921) 185-33-68
