some text about works

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta name="yandex-verification" content="dac9f93fb38c3cdf" />
 
-  <title>ООО «АПС»</title>
+  <title>РемСтройСервис Луга</title>
   
   <meta name="keywords" content="Комплексный ремонт квартиры Луга, Капитальный ремонт квартиры Луга, Ремонт новостроек под ключ Луга, Ремонт квартир под ключ Луга, Быстрый ремонт квартиры, Недорогой качественный ремонт квартир, Ремонт быстро Луга, Хороший ремонт, Качественный ремонт, Ремонт квартир, Хороший ремонт квартиры, Качественный ремонт квартир Луга, Ремонт квартир дешево, Строительство Луга, Строительство домов Луга, Стройматериалы Луга, Дома дешево Луга, Дома под ключ, Качественная отделка квартир, Качественная отделка домов, Реставрация, Поклейка обоев Луга, Обои Луга, Врезка замков, Замена замков Луга, Установка дверей, Укладка плитки, Ландшафтный дизайн, Бетонирование, Установка забора, Штукатурка, Отделочные работы, Монтаж кровли, Монтаж кровли Луга, Доставка стройтоваров, Бытовки, Электрик Луга, Сантехник Луга, Грузчики Луга, Вывоз мусора Луга, Уборка Луга, Монтаж окон Луга, Монтаж балконов, Балконы Луга, Дешево">
 
@@ -46,9 +46,9 @@
       <div class="container">
         <div class="row">
           <div class="col s12 left">
-            <h3>Капитальный ремонт квартир.</h3>
+            <h3>Капитальный ремонт квартир</h3>
             <h4 class="helloBlockText">Фиксированные сроки и стоимость</h4>
-            <a class="waves-effect btn-large helloBlock">Рассчитать стоимость</a>
+            <a href="tel:+79211853368" class="waves-effect btn-large helloBlock">Позвонить нам</a>
           </div>
         </div>
       </div>
@@ -57,7 +57,8 @@
 
   <div id="index-banner" class="parallax-container">
     <div class="parallax">
-      <video playsinline class="video-background" autoplay="autoplay" loop="loop" poster="URL" preload="auto" muted no-controls>
+      <video playsinline class="video-background" autoplay="autoplay" loop="loop" preload="auto" muted no-controls> 
+        <!-- poster="URL"  -->
         <source src="./intro_mobile.mp4" type="video/mp4" codecs="avc1.42E01E, mp4a.40.2"'>
       </video>
     </div>
@@ -65,33 +66,77 @@
 
   <div class="container">
     <div class="section">
+        <h3><i class="mdi-content-send brown-text"></i></h3>
+        <h4 class="center iconsHeader">Этапы работ</h4>
 
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Заголовок</h5>
+            <h2 class="center brown-text"><i class="material-icons">chat</i></h2>
+            <h5 class="center">Заявка</h5>
 
-            <p class="light">Иконка меняется</p>
+            <p class="light">Чтобы оценить перечень и стоимость работ, Вам необходимо связаться с нами,
+              мы уточним все подробности, ответим на вопросы и договоримся о выезде специалиста.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Заголовок</h5>
+            <h2 class="center brown-text"><i class="material-icons">info</i></h2>
+            <h5 class="center">Обмеры</h5>
 
-            <p class="light">Иконка меняется</p>
+            <p class="light">Для оценки стоимости ремонта специалист произведет обмеры.
+              В процессе обмеров обязательно уточните, что Вас интересует, чем больше 
+              информации Вы передадите специалисту, тем точнее будет калькуляция.
+            </p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Заголовок</h5>
+            <h2 class="center brown-text"><i class="material-icons">assessment</i></h2>
+            <h5 class="center">Калькуляция</h5>
 
-            <p class="light">Иконка меняется</p>
+            <p class="light">После проведения обмеров и уточнения технического задания,
+              составляется калькуляция стоимости Вашего ремонта. При производстве ремонт возможна корректировка
+              видов работ и материалов, тем самым изменяя окончательную стоимость.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">description</i></h2>
+            <h5 class="center">Договор</h5>
+
+            <p class="light">После корректировки калькуляции, Подрядчик и Заказчик подписывают договор и начинаются
+              работы по ремонту.
+            </p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">build</i></h2>
+            <h5 class="center">Работа</h5>
+
+            <p class="light">В первый день проводятся организационные мероприятия вместе с Вами на месте производства
+              работ, а именно обсуждение место хранения материала, время производства работ, доступ к объекту и т.д.
+            </p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center brown-text"><i class="material-icons">check_circle</i></h2>
+            <h5 class="center">Прием</h5>
+
+            <p class="light">После окончания работ, в присутствии Подрядчика осуществляется прием работ.
+              Очень важно в случае обнаружения каких-либо неточностей, сразу сообщить об этом Подрядчику.
+            </p>
           </div>
         </div>
       </div>
@@ -105,13 +150,19 @@
         <div class="col s12 center maps">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>Наши работы</h4>
-          <!-- https://codepen.io/dudleystorey/pen/ehKpi -->
-          <div id="slider">
-              <figure>
-              <img src="./image/img1.jpg" alt>
-              <img src="./image/img3.jpg" alt>
-              </figure>
-          </div>
+              <div class="slider">
+                <ul class="slides">
+                  <li>
+                    <img src="image/img1.jpg">
+                  </li>
+                  <li>
+                    <img src="image/img2.jpg"> 
+                  </li>
+                  <li>
+                    <img src="image/img3.jpg"> 
+                  </li>
+                </ul>
+            </div>
         </div>
       </div>
     </div>
@@ -152,7 +203,7 @@
     </div>
   </div>
 
-  <div class="parallax-container valign-wrapper">
+  <!-- <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
@@ -161,7 +212,7 @@
       </div>
     </div>
     <div class="parallax"><img src="./image/background1.jpg" alt=""></div>
-  </div>
+  </div> -->
 
   <footer class="page-footer">
     <div class="container">
@@ -175,7 +226,7 @@
             188230 г. Луга, Ленинградская обл., пр. Комсомольский д.42
           </p>
         </div>
-        <div class="col l3 s12 right">
+        <!-- <div class="col l3 s12 right">
           <h5 class="white-text">Connect</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
@@ -183,7 +234,7 @@
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="footer-copyright">
@@ -196,9 +247,16 @@
 
 
   <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-
+  <script>
+     $(document).ready(function(){
+      $('.slider').slider({
+        height: 500,
+        indicators: false
+      });
+    });
+  </script>
   </body>
 </html>
