--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
   
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   
+  <!-- Statistics -->
+   <!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+	   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+	   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+	   ym(51685214, "init", {
+			id:51685214,
+			clickmap:true,
+			trackLinks:true,
+			accurateTrackBounce:true,
+			webvisor:true
+	   });
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/51685214" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
+  <!-- / Statistics -->
+
+  
   <meta name="keywords" content="Комплексный ремонт квартиры Луга, Капитальный ремонт квартиры Луга, Ремонт новостроек под ключ Луга, Ремонт квартир под ключ Луга, Быстрый ремонт квартиры, Недорогой качественный ремонт квартир, Ремонт быстро Луга, Хороший ремонт, Качественный ремонт, Ремонт квартир, Хороший ремонт квартиры, Качественный ремонт квартир Луга, Ремонт квартир дешево, Строительство Луга, Строительство домов Луга, Стройматериалы Луга, Дома дешево Луга, Дома под ключ, Качественная отделка квартир, Качественная отделка домов, Реставрация, Поклейка обоев Луга, Обои Луга, Врезка замков, Замена замков Луга, Установка дверей, Укладка плитки, Ландшафтный дизайн, Бетонирование, Установка забора, Штукатурка, Отделочные работы, Монтаж кровли, Монтаж кровли Луга, Доставка стройтоваров, Бытовки, Электрик Луга, Сантехник Луга, Грузчики Луга, Вывоз мусора Луга, Уборка Луга, Монтаж окон Луга, Монтаж балконов, Балконы Луга, Дешево">
 
   <!-- CSS  -->
