--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name = "format-detection" content = "telephone=no">
 
   <meta name="yandex-verification" content="dac9f93fb38c3cdf" />
+  
+  <meta name="description" content="Качественно выполняем работы по ремонту квартир. Частичный и комплексный ремонт от профессионалов!" />
 
   <title>РемСтройСервис Луга</title>
   
