--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <title>РемСтройСервис Луга</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name = "format-detection" content = "telephone=no">
-
-  <meta name="yandex-verification" content="dac9f93fb38c3cdf" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   
   <meta name="description" content="Качественно выполняем работы по ремонту квартир. Частичный и комплексный ремонт от профессионалов!" />
-
-  <title>РемСтройСервис Луга</title>
+  <meta name="keywords" content="Комплексный ремонт квартиры Луга, Капитальный ремонт квартиры Луга, Ремонт новостроек под ключ Луга, Ремонт квартир под ключ Луга, Быстрый ремонт квартиры, Недорогой качественный ремонт квартир, Ремонт быстро Луга, Хороший ремонт, Качественный ремонт, Ремонт квартир, Хороший ремонт квартиры, Качественный ремонт квартир Луга, Ремонт квартир дешево, Строительство Луга, Строительство домов Луга, Стройматериалы Луга, Дома дешево Луга, Дома под ключ, Качественная отделка квартир, Качественная отделка домов, Реставрация, Поклейка обоев Луга, Обои Луга, Врезка замков, Замена замков Луга, Установка дверей, Укладка плитки, Ландшафтный дизайн, Бетонирование, Установка забора, Штукатурка, Отделочные работы, Монтаж кровли, Монтаж кровли Луга, Доставка стройтоваров, Бытовки, Электрик Луга, Сантехник Луга, Грузчики Луга, Вывоз мусора Луга, Уборка Луга, Монтаж окон Луга, Монтаж балконов, Балконы Луга, Дешево" />
+  <meta name="robots" content="index, follow" />
   
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  
-  <!-- Statistics -->
+<!-- Statistics -->
+   <meta name="yandex-verification" content="dac9f93fb38c3cdf" />
    <!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
 	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -31,9 +31,6 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/51685214" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
   <!-- / Statistics -->
-
-  
-  <meta name="keywords" content="Комплексный ремонт квартиры Луга, Капитальный ремонт квартиры Луга, Ремонт новостроек под ключ Луга, Ремонт квартир под ключ Луга, Быстрый ремонт квартиры, Недорогой качественный ремонт квартир, Ремонт быстро Луга, Хороший ремонт, Качественный ремонт, Ремонт квартир, Хороший ремонт квартиры, Качественный ремонт квартир Луга, Ремонт квартир дешево, Строительство Луга, Строительство домов Луга, Стройматериалы Луга, Дома дешево Луга, Дома под ключ, Качественная отделка квартир, Качественная отделка домов, Реставрация, Поклейка обоев Луга, Обои Луга, Врезка замков, Замена замков Луга, Установка дверей, Укладка плитки, Ландшафтный дизайн, Бетонирование, Установка забора, Штукатурка, Отделочные работы, Монтаж кровли, Монтаж кровли Луга, Доставка стройтоваров, Бытовки, Электрик Луга, Сантехник Луга, Грузчики Луга, Вывоз мусора Луга, Уборка Луга, Монтаж окон Луга, Монтаж балконов, Балконы Луга, Дешево" />
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -70,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col s12 left">
-            <h3>Капитальный ремонт квартир</h3>
+            <h1 class="h1pagetitle">Капитальный ремонт квартир</h1>
             <h4 class="helloBlockText">Фиксированные сроки и стоимость</h4>
             <a href="tel:+79211853368" class="waves-effect btn-large helloBlock">Позвонить нам</a>
           </div>
