--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   
   <meta name="description" content="Капитальный ремонт квартир с низкой стоимостью и быстрыми сроками. Делаем хороший ремонт квартир быстро и качественно в городе Луга и Лужском р-не. Современные решения, включающие черновые работы, многие сопуствующие услуги, все материалы для ремонта." />
-  <meta name="keywords" content="Комплексный ремонт квартиры Луга, Капитальный ремонт квартиры Луга, Ремонт новостроек под ключ Луга, Ремонт квартир под ключ Луга, Быстрый ремонт квартиры, Недорогой качественный ремонт квартир, Ремонт быстро Луга, Хороший ремонт, Качественный ремонт, Ремонт квартир, Хороший ремонт квартиры, Качественный ремонт квартир Луга, Ремонт квартир дешево, Строительство Луга, Строительство домов Луга, Стройматериалы Луга, Дома дешево Луга, Дома под ключ, Качественная отделка квартир, Качественная отделка домов, Реставрация, Поклейка обоев Луга, Обои Луга, Врезка замков, Замена замков Луга, Установка дверей, Укладка плитки, Ландшафтный дизайн, Бетонирование, Установка забора, Штукатурка, Отделочные работы, Монтаж кровли, Монтаж кровли Луга, Доставка стройтоваров, Бытовки, Электрик Луга, Сантехник Луга, Грузчики Луга, Вывоз мусора Луга, Уборка Луга, Монтаж окон Луга, Монтаж балконов, Балконы Луга, Дешево" />
+  <meta name="keywords" content="капитальный ремонт квартир, сделать ремонт квартиры, ремонт квартир компания, ремстройсервис ремонт, ремонт квартир луга, ремстройсервис, компания апс, сделать капитальный ремонт луга, где сделать ремонт квартиры, где сделать капитальный ремонт квартиры" />
   <meta name="robots" content="index, follow" />
   
 <!-- Statistics -->
