--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name = "format-detection" content = "telephone=no">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   
-  <meta name="description" content="Капитальный ремонт квартир с низкой стоимостью и быстрыми сроками. Делаем хороший ремонт квартир быстро и качественно в городе Луга и Лужском р-не. Современные решения, включающие черновые работы, многие сопуствующие услуги, все материалы для ремонта." />
+  <meta name="description" content="Ремонт квартир с низкой стоимостью и быстрыми сроками. Делаем хороший ремонт квартир быстро и качественно в городе Луга и Лужском р-не. Современные решения, включающие черновые работы, многие сопуствующие услуги, все материалы для ремонта." />
   <meta name="keywords" content="капитальный ремонт квартир, сделать ремонт квартиры, ремонт квартир компания, ремстройсервис ремонт, ремонт квартир луга, ремстройсервис, компания апс, сделать капитальный ремонт луга, где сделать ремонт квартиры, где сделать капитальный ремонт квартиры" />
   <meta name="robots" content="index, follow" />
   
