--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <meta name="robots" content="index, follow" />
   
 <!-- Statistics -->
-   <meta name="yandex-verification" content="dac9f93fb38c3cdf" />
    <!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
 	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -40,7 +39,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo"><img width="150px" height="auto" src="image/Logotip.png" alt="Logo" /></a>
+      <a id="logo-container" href="#" class="brand-logo"><img width="150px" height="auto" src="image/logo.png" alt="РСС Луга" /></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="tel:+79211853368">
             +7 (921) 185-33-68
