updated video container

--- a/index.html
+++ b/index.html
@@ -75,13 +75,12 @@
     </div>
   </div>
 
-  <div id="index-banner" class="parallax-container">
-    <div class="parallax">
-      <video playsinline class="video-background" autoplay="autoplay" loop="loop" preload="auto" muted no-controls> 
-        <!-- poster="URL"  -->
-        <source src="./intro_mobile.mp4" type="video/mp4" codecs="avc1.42E01E, mp4a.40.2"'>
-      </video>
-    </div>
+  <div class="section">
+    <video playsinline poster="./intro_poster.png" class="video-background" autoplay="autoplay" loop="loop" preload="auto" muted no-controls>
+      <source src="./intro.mp4" type="video/mp4" codecs="avc1.42E01E, mp4a.40.2"'>
+      Ваш браузер не поддерживается!
+      Советуем Chrome - <a href="https://www.google.com/chrome/">Скачать</a>
+    </video>
   </div>
 
   <div class="container">
