--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
 
   <!--  Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="js/go_top.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script>
