--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css?v=002" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css?v=002" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css?v=003" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <nav class="white" role="navigation">
@@ -267,7 +267,7 @@
 
   <!--  Scripts-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="js/go_top.js"></script>
+  <script src="js/go_top.js?v=001"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script>
